--- a/gooddata-haskell.cabal
+++ b/gooddata-haskell.cabal
@@ -11,7 +11,8 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     GoodData.REST.Session, GoodData.REST.MD.Query,
+  exposed-modules:     GoodData.Session,
+                       GoodData.REST.MD.Query,
                        GoodData.REST.Types.Account, GoodData.REST.Types.Basic, GoodData.REST.Types.MD.Query, GoodData.REST.Types.MD.Obj
   other-modules:       Util.HTTP, Util.JSON, Data.Conduit.Aeson
   build-depends:       base == 4.*, mtl == 2.*, transformers, time, bytestring, text,
