--- a/gooddata-haskell.cabal
+++ b/gooddata-haskell.cabal
@@ -12,10 +12,11 @@ cabal-version:       >=1.8
 
 library
   exposed-modules:     GoodData.Session,
+                       GoodData.Expand,
                        GoodData.REST.MD.Query,
                        GoodData.REST.Types.Account, GoodData.REST.Types.Basic, GoodData.REST.Types.MD.Query, GoodData.REST.Types.MD.Obj
   other-modules:       Util.HTTP, Util.JSON, Data.Conduit.Aeson
-  build-depends:       base == 4.*, mtl == 2.*, transformers, time, bytestring, text,
+  build-depends:       base == 4.*, mtl == 2.*, transformers, time, bytestring, text, containers, syb,
                        aeson == 0.6.*, JsonGrammar == 0.3.*,
                        conduit == 0.4.*, http-conduit == 1.4.*, attoparsec-conduit ==0.4.*,
                        loch-th
